# cpp-template

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  bench_data  data.json  data_process.py  index.html
public/: data.json  styles.css
tests/: CMakeLists.txt  smoke_test.cpp
